# intelligent_camera

./: ------  .gitignore  .gitmodules  CMakeLists.txt  README.md  intelligent_camera.sln
Project1/: Project1.vcxproj
engine_base/: BasicCamera.cpp  BasicCamera.h  CMakeLists.txt  Component.h  DebugRenderer.cpp  DebugRenderer.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  FlatRenderer.cpp  FlatRenderer.h  GLSL.cpp  ICamera.cpp  ICamera.h  IRenderer.h  ISystem.h  Input.cpp  ModelLoader.cpp  ModelLoader.h  Program.cpp  Program.h  Scene.cpp  Scene.h  StaticCamera.cpp  StaticCamera.h  TextureRenderer.cpp  TextureRenderer.h  Utility.h  debug.frag  engine_base.vcxproj  engine_base.vcxproj.filters  flat.vert  packages.config
imgui_lib/: imgui_lib.vcxproj
intelligent_camera/: BlenderCamera.cpp  BlenderCamera.h  BoidSystem.cpp  BoidSystem.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.h  DebugCamera.cpp  DebugCamera.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Globals.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  Player.cpp  Player.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  QuickHull.cpp  QuickHull.h  RenderingSystem.cpp  RenderingSystem.h  SplineCamera.cpp  SplineCamera.h  World.cpp  World.h  flat.vert  grid.vert  imgui.ini  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  intelligent_camera.vcxproj  intelligent_camera.vcxproj.filters  main.cpp  (+5 more)
intelligent_camera/Models/: cube.mtl  shpere.mtl  sphere.ply  tree.mtl  tree2.mtl
level_builder/: BlenderCamera.cpp  BlenderCamera.h  CMakeLists.txt  IndexRenderer.cpp  IndexRenderer.h  Selected.cpp  Selected.h  SelectionRenderer.cpp  SelectionRenderer.h  SelectionSystem.cpp  SelectionSystem.h  debug.frag  debug.vert  imgui.ini  level_builder.vcxproj  level_builder.vcxproj.filters  main.cpp  outline.frag  packages.config  scene.json  test
level_builder/assets/: bush.mtl  cactus.mtl  floor.mtl  rock.mtl
shaders/: CMakeLists.txt  bin2c.cmake  debug.frag  flat.frag  grid.frag  outline.vert  phong.frag  phong.vert  shaders.cpp  shaders.h
tinyfiledialogs/: tinyfiledialogs.vcxproj  tinyfiledialogs.vcxproj.filters
